[DataTable] Fix resizable handle overflow and clipping

--- a/@navikt/core/css/src/data-table.css
+++ b/@navikt/core/css/src/data-table.css
@@ -262,7 +262,7 @@
 }
 
 .aksel-data-table__th-resize-handle {
-  z-index: 2;
+  z-index: 1;
   position: absolute;
   cursor: col-resize;
   margin: 0;
@@ -293,6 +293,13 @@
     transition: background 50ms linear;
   }
 
+  &:hover,
+  &:focus-visible,
+  &:active {
+    /* Avoids clipping when having sticky columns */
+    z-index: 3;
+  }
+
   &:hover::after {
     /* TODO: Consider if the resize-handle should be visible already when hovering the column header */
     background: var(--ax-bg-strong);
@@ -303,7 +310,7 @@
     background: var(--ax-bg-strong-pressed);
   }
 
-  .aksel-data-table__th:last-of-type & {
+  .aksel-data-table__column-header:last-of-type & {
     inset-inline-end: 0;
     width: 15px;
 
@@ -387,7 +394,7 @@
 }
 
 .aksel-data-table__filler-cell {
-  width: auto;
+  width: 100%;
   display: table-cell;
   padding: 0;
 }
